Style fix
- overflowing container set to auto. looks cooler

--- a/cuckoo/web/src/scss/components/_flex-grid.scss
+++ b/cuckoo/web/src/scss/components/_flex-grid.scss
@@ -64,6 +64,7 @@
 		&--center {
 			@extend .flex-grid__body;
 			justify-content: center;
+			overflow-y: auto;
 		}
 	}
 
